Fix the overflow of comments UI

--- a/scriptmanager/src/app/script/script-comment/script-comment.component.sass
+++ b/scriptmanager/src/app/script/script-comment/script-comment.component.sass
@@ -3,6 +3,7 @@
   z-index: 1
 
 .fixedComments
-  overflow: auto
-  height: 750px
+  overflow-y: scroll
+  height: 100%
+  max-height: 400px
   width: 350px
